# Gxcar

./: README.md
GXcar/: CMakeLists.txt  GXcar.sh
GXcar/include/: HeadFile.h
GXcar/src/: ObjectDetected.cpp  ReadQRCode.cpp  main.cpp
